packages/admin-ui/src/light_dark.scss
/*
  LIGHT
*/
#light.body {
  background-color: var(--color-light-background-main);
}
#light {
  #main {
    background-color: var(--color-light-background-main);

    .eth-multi-client,
    .ipfs-multi-client {
      &:hover:not(.selected) {
        border-color: rgb(218, 218, 218);
        background-color: rgb(218, 218, 218);
      }
    }
  }
  #sidebar {
    background-color: var(--color-light-background-sidebar-topbar);
    border-right: var(--border-style-light);
    box-shadow: rgba(0, 0, 0, 0.1) 1px 0px 15px;
  }
  #topbar {
    background-color: var(--color-light-background-main);
  }
  .body {
    background-color: var(--color-light-background-main);
  }
}

/*
  DARK
*/
#dark.body {
  background-color: var(--color-dark-background-main);
}
#dark {
  #main {
    background-color: var(--color-dark-background-main);

    // =============
    // HTML elements
    // =============
    p,
    strong,
    span,
    div,
    td,
    a,
    label {
      color: var(--color-dark-secondarytext);
    }
    .section-title,
    .section-subtitle,
    th,
    header {
      color: var(--color-dark-maintext);
    }

    // ====================
    // Bootstrap components
    // ====================

    // ALERTS
    .alert:not(a) {
      color: #000000;

      p,
      strong {
        color: #000000;
      }
    }

    // CARDS
    .card {
      background-color: var(--color-dark-card);
    }
    .eth-multi-client,
    .ipfs-multi-client {
      &:hover:not(.selected) {
        border-color: var(--color-dark-card-hover);
        background-color: var(--color-dark-card-hover);
      }
    }
  }
  #sidebar {
    background-color: var(--color-dark-background-sidebar);
    box-shadow: rgba(0, 0, 0, 0.1) 1px 0px 15px;
    .nav a,
    .nav .sidenav-item,
    .sidebar-media-footer {
      color: var(--color-dark-secondarytext);
      svg {
        opacity: 1;
      }
    }
  }
  #topbar {
    background-color: var(--color-dark-background-topbar);
    .tn-dropdown .tn-dropdown-toggle {
      color: var(--dappnode-strong-main-color) !important;
      opacity: 1;
    }
  }
  .body {
    background-color: var(--color-dark-background-main);
  }
}

